<resources>
    <string name="app_name">RPG Character Creation</string>
    <string name="hint_character_name">Digite o nome do personagem</string>
    <string name="hint_player_name">Digite o nome do jogador</string>
    <string name="hint_appearance">Descreva a aparência</string>
    <string name="hint_personality">Descreva a personalidade</string>
    <string name="hint_history">Conte a história do personagem</string>
    <string name="btn_create_character">Criar Personagem</string>
    <string name="label_origin">Origem</string>
    <string name="label_class">Classe</string>
    <string name="label_attributes">Atributos</string>
    <string name="label_strength">Força</string>
    <string name="label_agility">Agilidade</string>
    <string name="label_intellect">Intelecto</string>
    <string name="label_vigor">Vigor</string>
    <string name="label_presence">Presença</string>
    <string name="defaultAttributesValues">1</string>
    <string name="imagem_com_livro_e_espada_de_rpg">Imagem com livro e espada de RPG</string>
    <string name="bem_vindo_a_nexus_rpg">Bem-vindo a Nexus RPG!</string>
    <string name="nexusrpg_um_app_para_cria_o_e_gest_o_de_fichas_de_rpg_combinando_facilidade_e_magia">NexusRPG é um app para criação e gestão de fichas de RPG, combinando facilidade e magia.</string>
    <string name="organize_suas_aventuras_com_poderosos_recursos_e_leve_seu_jogo_para_outra_dimens_o">Organize suas aventuras com poderosos recursos e leve seu jogo para outra dimensão.</string>
    <string name="criar_personagem">Criar Personagem</string>
    <string name="pr_ximo">Próximo</string>
    <string name="personagens">Personagens</string>
    <string name="plus">+</string>
    <string name="texto_aqui">Texto aqui</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="entry_password">Digite sua senha</string>
    <string name="login">Login</string>
    <string name="new_account">Criar</string>
    <string name="campo_de_senha">Campo de senha</string>
    <string name="campo_de_e_mail">Campo de e-mail</string>
    <string name="imagem_guerreiros_enfrentando_um_drag_o">Imagem guerreiros enfrentando um dragão</string>
    <string name="espada_e_livro_rpg">Espada e livro RPG</string>
    <string name="lae_zel">Lae\'zel</string>
    <string name="gale">Gale</string>
    <string name="astarion">Astarion</string>
    <string name="entry_email">Digite seu email</string>
    <string name="foto_do_personagem">Foto do personagem</string>
    <string name="label_select_image">Selecione a foto do seu personagem</string>
    <string name="btnSelectImage">Enviar imagem de personagem</string>
    <string name="create_account_text">Criar Conta</string>
    <string name="create_character_text">Criar Personagem</string>
    <string name="ask_have_account_text">Já tem uma conta?</string>
    <string name="character_name">Nome do personagem</string>
    <string name="player_name">Nome do player\n</string>
</resources>
