<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Campo para o Nome do Personagem -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_character_name" />

        <EditText
            android:id="@+id/etCharacterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="name"
            android:hint="@string/hint_character_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select_image" />

        <!-- Exibição da imagem selecionada -->
        <ImageView
            android:id="@+id/imageViewCharacter"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="TODO"
            android:src="@drawable/character_profile"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selecionar Imagem"
            android:layout_marginTop="16dp" />

        <!-- Campo para o Nome do Jogador -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_player_name" />

        <EditText
            android:id="@+id/etPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="name"
            android:hint="@string/hint_player_name" />

        <!-- Campo para Aparência -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_appearance" />

        <EditText
            android:id="@+id/etAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="appearance"
            android:hint="@string/hint_appearance" />

        <!-- Campo para Personalidade -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_personality" />

        <EditText
            android:id="@+id/etPersonality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="personality"
            android:hint="@string/hint_personality" />

        <!-- Campo para História -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_history" />

        <EditText
            android:id="@+id/etHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="history"
            android:hint="@string/hint_history" />

        <!-- Campo para Origem -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_origin" />

        <Spinner
            android:id="@+id/spinnerOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Campo para Classe -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_class" />

        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Atributos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_attributes" />

        <!-- Atributos Numéricos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_strength" />
            <EditText
                android:id="@+id/etStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:text="1"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_agility" />
            <EditText
                android:id="@+id/etAgility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:text="1"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_intellect" />
            <EditText
                android:id="@+id/etIntellect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:text="1"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_vigor" />
            <EditText
                android:id="@+id/etVigor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:text="1"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_presence" />
            <EditText
                android:id="@+id/etPresence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints=""
                android:text="1"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!-- Botão de Envio -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_character"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>
</ScrollView>
