<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds='true'
        app:srcCompat="@drawable/captura_de_tela_2024_11_19_142734" />


    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/bem_vindo_a_nexus_rpg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/nexusrpg_um_app_para_cria_o_e_gest_o_de_fichas_de_rpg_combinando_facilidade_e_magia"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvTitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/organize_suas_aventuras_com_poderosos_recursos_e_leve_seu_jogo_para_outra_dimens_o"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCreateCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/criar_personagem" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:padding="10dp"
        android:text="@string/pr_ximo"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

</LinearLayout>
